# boids

./: .gitignore
leah/jax/: README.md  boids.py  config.py  main.py  requirements.txt  visualize.py
leah/rust/: CLAUDE.md  Cargo.toml
leah/rust/boid_playground/: Cargo.toml
leah/rust/boid_playground/src/: main.rs  my_boid.rs  my_boid_ui.rs
leah/rust/boid_simulation/: Cargo.toml  build_wasm.sh
leah/rust/boid_simulation/src/: boid.rs  constants.rs  lib.rs  main.rs  simulation.rs  sir.rs  spatial.rs  ui.rs  visualization.rs
leah/rust/todos/: 2026-01-31_my-boid-feature.md  2026-02-12_new-laptop-setup.md
leah/rust/todos/old/: 12-27-25_wasm-integration-plan.md  12-30-25_responsive-canvas-hybrid.md
rust_src/: Cargo.toml
rust_src/src/: main.rs  sim.rs
